Thu Aug 31 21:58:23 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* data/xchat-gnome.1:
	* NEWS:
	  - Manpage refactoring.
	  - Add --existing documentation.

Thu Aug 31 16:58:26 CEST 2006  Xavier Claessens <xclaesse@gmail.com>

	* src/common/dbus/example.py:
	* src/common/dbus/Makefile.am:
	* src/common/dbus/url_handler.schemas.in:
	* src/common/dbus/dbus-plugin.c:
	* src/common/dbus/dbus-client.c:
	* src/common/dbus/example.c:
	* src/common/dbus/README:
	* src/common/dbus/remote-object.xml:
	* src/fe-gnome/fe-gnome.c:
	* configure.ac:
	  - Rename D-Bus service to org.gnome.Xchat.
	    object path is now /org/gnome/Xchat/Remote with interfaces
	    org.gnome.Xchat.Plugin and org.gnome.Xchat.Connection.
	  - Add --existing command line option to connect --url in a running
	    XChat instance.
	  - Install org.gnome.Xchat.service file.

Wed Aug 30 21:35:39 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/common/dbus/dbus-client.h:
	* src/common/dbus/org.gnome.Xchat.service.in:
	* src/common/dbus/dbus-plugin.xml:
	* src/common/dbus/dbus-client.c:
	* src/common/dbus/remote-object.xml:
	  - Add missing files from sync.

Wed Aug 30 21:09:24 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/common/outbound.c:
	* src/common/outbound.h:
	* src/common/dbus/xchat-remote.c:
	* src/common/dbus/example.py:
	* src/common/dbus/marshallers.list:
	* src/common/dbus/Makefile.am:
	* src/common/dbus/dbus-plugin.c:
	* src/common/dbus/CVS/Entries:
	* src/common/dbus/example.c:
	* src/common/dbus/README:
	* src/common/util.c:
	* src/common/proto-irc.c:
	* src/common/xchatc.h:
	* src/common/cfgfiles.c:
	* src/common/text.c
	* src/common/dcc.c:
	* src/common/.cvsignore:
	* src/common/plugin.c:
	* src/common/inbound.c:
	* src/common/server.c:
	* src/common/xchat.c:
	* src/common/CVS/Entries:
	* src/common/xchat.h:
	* src/common/make-te.c:
	* acinclude.m4:
	  - Sync from xchat CVS.

Wed Aug 30 20:03:44 CEST 2006  Guillaume Desmottes <cass@skynet.be>
